Fixed overflow

--- a/app/components/Footer/Footer.css
+++ b/app/components/Footer/Footer.css
@@ -1,5 +1,6 @@
 .footer {
   background-color: #0251a0;
+  overflow: hidden;
 }
 
 .footer-container {
